# GraphFM

./: .gitignore  README.md  debug.sh  generate_data.sh  plot.sh  pyproject.toml  rebuttal_plan.md  spe_learnable.sh  train.sh
configs/: budget100k_deepsets_h256_ep100_params200k_eig_k32.yaml  budget100k_gin_h256_ep100_params200k_eig_k32.yaml  budget100k_gin_h256_ep100_params405k_eig_k32.yaml  budget10k_deepsets_h128_ep50_params50k_eig_k16.yaml  budget10m_gin_h768_ep500_params10m_proj_k128_m64.yaml  budget1m_gin_h512_ep200_params2m_eig_k64.yaml  debug.yaml
scripts/: count_params.py  generate_config.py  generate_dataset.py  kill_runs.sh  plot_merge_graph.py  plot_pe_sweep.py  plot_perturb_graphon.py  plot_size_shift.py  run_experiment.py
src/graphfm/: __init__.py  config.py  dataset.py  experiments.py  graphon.py  merge.py  metrics.py  models.py  pe.py  sampling.py  train.py
